# machine-learning

./: CMakeLists.txt  README.md
share/: CMakeLists.txt
share/eigen-plot-test/: CMakeLists.txt  main.cpp
share/plot-test/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/functions/: CMakeLists.txt  Geometry.cpp  Geometry.h  Point.cpp  Point.h
src/plot/: CMakeLists.txt  Plot.cpp  Plot.h
